# rubin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo_beat.py  logic_ctl.py  midi.py  midi_read.py  patches.py  pyproject.toml  server.py  transcribe.py
.github/workflows/: test.yml
rubin/: __init__.py  logic_ctl.py  midi.py  midi_read.py  server.py  transcribe.py  wave_edit.py
tests/: test_fuzz.py  test_integrity.py  test_logic_ctl.py  test_midi.py  test_midi_read.py  test_patches.py  test_pipeline.py  test_pipeline_audio.py  test_server.py  test_transcribe.py  test_wave_edit.py
